commit and push

--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,6 @@ image_CA_thumbs_loc: "/images/copyrighted/CA/thumbs"
 
 image_Alpinism_fulls_loc: "/images/copyrighted/Alpinism/fulls"
 image_Alpinism_thumbs_loc: "/images/copyrighted/Alpinism/thumbs"
+
+image_scifi_fulls_loc: "/images/copyrighted/scifi/fulls"
+image_scifi_thumbs_loc: "/images/copyrighted/scifi/thumbs"
