--- a/_data/captions.yml
+++ b/_data/captions.yml
@@ -1,6 +1,6 @@
 ---
-- filename: disko_gps.JPG
+- id: disko_gps.JPG
   caption: A glacier in Greenland.
-- filename: disko_green.JPG
+- id: disko_green.JPG
   caption: A beautiful view of Greenland.
 ---
