commit and push

--- a/_data/captions.yml
+++ b/_data/captions.yml
@@ -1,6 +1,6 @@
 ---
 - id: disko_gps.JPG
-  caption: A glacier in Greenland.
+  caption: "A glacier in Greenland"
 - id: disko_green.JPG
-  caption: A beautiful view of Greenland.
+  caption: "A beautiful view of Greenland"
 ---
