--- a/_data/captions.yml
+++ b/_data/captions.yml
@@ -1,5 +1,5 @@
 ---
-- id: disko_gps.JPG
+- id: disko_gps
   caption: "A glacier in Greenland"
 - id: disko_green.JPG
   caption: "A beautiful view of Greenland"
