commit and push

--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -1,10 +1,10 @@
 - authors: Hartl, L., Zieher, T., Bremer, M., Stocker-Waldhuber, M., Zahs, V., Höfle, B., Klug, C., and Cicoira, A.
-  year: 2022
+  year: 2023
   title: Multisensor monitoring and data integration reveal cyclical destabilization of Äußeres Hochebenkar Rock Glacier
   journal: Earth Surface Dynamics
-  volume: in review
+  volume: 
   pages: 
-  doi: https://doi.org/10.5194/esurf-2022-48
+  doi: https://doi.org/10.5194/esurf-11-117-2023
   pdf_external: Y
   openaccess: Y
   new: N
@@ -13,7 +13,7 @@
   year: 2022
   title: Kinematic observations of the mountain cryosphere using in-situ GNSS instruments
   journal: Earth System Science Data
-  volume: in review
+  volume: 
   pages: 
   doi: https://doi.org/10.5194/essd-2021-176
   pdf_external: Y
