commit and push

--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -2,8 +2,8 @@
   year: 2023
   title: Multisensor monitoring and data integration reveal cyclical destabilization of Äußeres Hochebenkar Rock Glacier
   journal: Earth Surface Dynamics
-  volume: 
-  pages: 
+  volume: 11
+  pages: 117–147
   doi: https://doi.org/10.5194/esurf-11-117-2023
   pdf_external: Y
   openaccess: Y
@@ -13,9 +13,9 @@
   year: 2022
   title: Kinematic observations of the mountain cryosphere using in-situ GNSS instruments
   journal: Earth System Science Data
-  volume: 
-  pages: 
-  doi: https://doi.org/10.5194/essd-2021-176
+  volume: 14
+  pages: 5061–5091
+  doi: https://doi.org/10.5194/essd-14-5061-2022
   pdf_external: Y
   openaccess: Y
   new: N 
