commit and push

--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -3,7 +3,7 @@
   title: Snowpack and avalanche characterization over the 2021–2022 winter season in Sisimiut, West Greenland
   journal: Frontiers in Earth Sciences
   volume: 11
-  pages: 1-11
+  pages: 1–11
   doi: https://doi.org/10.3389/feart.2023.1134728
   pdf_external: Y
   openaccess: Y
