commit and push

--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -1,5 +1,5 @@
 - authors: Weber, S., Cicoira, A.  
-  year: (in review)
+  year: 2024
   title: Empirically-determined thermal diffusivity of mountain permafrost
   journal: Geophysical Research Letters
   openaccess: N
