commit and push

--- a/_data/publications_papers.yml
+++ b/_data/publications_papers.yml
@@ -3,7 +3,7 @@
   title: Empirically-determined thermal diffusivity of mountain permafrost
   journal: Geophysical Research Letters
   openaccess: N
-  new: Y
+  new: YN
 
 - authors: Muñoz-Torrero, A., Allen, S., Cicoira, A., Stoffel, M.
   year: 2024
@@ -15,8 +15,6 @@
   pdf_external: Y
   openaccess: Y
   new: N
-  
-
 
 - authors: Meyerat, G., Munch, J., Cicoira, A., McArdell, B., Müller, C. R., Frey, H., Bartelt, P.  
   year: 2023
@@ -28,7 +26,6 @@
   pdf_external: Y
   openaccess: Y
   new: N
-  
   
 - authors: Leinauer, J., Weber, S., Cicoira, A., Beutel, J., & Krautblatter, M.  
   year: 2023
@@ -62,7 +59,6 @@
   pdf_external: Y
   openaccess: Y
   new: N
-  
   
 - authors: Hartl, L., Zieher, T., Bremer, M., Stocker-Waldhuber, M., Zahs, V., Höfle, B., Klug, C., and Cicoira, A.
   year: 2023
